[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lcne-patchseq-figures"
version = "0.1.0"
description = "Reproduce LCNE patch-seq publication figures from frozen tables"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "h5py==3.16.0",
    "matplotlib==3.10.9",
    "numpy==2.2.6",
    "pandas==2.3.3",
]

[project.scripts]
generate-s14jk = "lcne_patchseq_figures.cli:main"

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.package-data]
lcne_patchseq_figures = ["data/*.csv"]
